# SoFairAgent

./: README.md  config.yaml  pyproject.toml  requirements.txt  run.py
sofairagent/: __init__.py  __main__.py  __main__old.py  search.py  software_database.py
sofairagent/agents/: __init__.py  base.py  base_old.py  search_agent.py  search_agent_old.py  search_agent_only_software.py  simple.py
sofairagent/api/: __init__.py  api.py  base.py  logger.py
sofairagent/etl/: dataset.py
sofairagent/utils/: __init__.py  template.py
sofairagent/verifier/: create_train_dataset.py  model_factory.py  verifier.py
tests/: test___main__.py  test_search.py  test_software_database.py
tests/agents/: __init__.py  test_search_agent.py
training/verifier/: upload.py
